Updated libs and removed unsafe operations